WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59315
REGRESSION (WK2): Holding down Option while dragging scrollbar thumb has no effect (should make scroll distance equal mouse translation)
https://bugs.webkit.org/show_bug.cgi?id=59315
Summary
REGRESSION (WK2): Holding down Option while dragging scrollbar thumb has no e...
mitz
Reported
2011-04-24 23:57:54 PDT
REGRESSION (WK2): Holding down Option while dragging scrollbar thumb has no effect (should make scroll distance equal mouse translation)
Attachments
Patch
(7.47 KB, patch)
2011-04-25 00:04 PDT
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-04-24 23:59:15 PDT
<
rdar://problem/9113516
>
mitz
Comment 2
2011-04-25 00:04:51 PDT
Created
attachment 90905
[details]
Patch
Maciej Stachowiak
Comment 3
2011-04-25 00:23:27 PDT
Comment on
attachment 90905
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=90905&action=review
r=me but consider the naming.
> Source/WebCore/platform/Scrollbar.cpp:259 > +void Scrollbar::moveThumb(int pos, bool draggingDocument)
draggingDocument doesn't seem like a very clear name for what the different behavior is. Is there a way to name this more clearly? I would suggest an enum instead of a bool here, but the usage seems clear at the one call site, so I won't.
mitz
Comment 4
2011-04-25 00:26:16 PDT
Thanks for the review! I couldn’t think of a better and reasonably concise name, and I don’t think an enum is needed, given that the calls site doesn’t pass a boolean literal.
mitz
Comment 5
2011-04-25 00:29:12 PDT
Fixed in
r84767
. <
http://trac.webkit.org/changeset/84767
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug