REGRESSION (WK2): Holding down Option while dragging scrollbar thumb has no effect (should make scroll distance equal mouse translation) https://bugs.webkit.org/show_bug.cgi?id=59315

Reviewed by Maciej Stachowiak.

* platform/Scrollbar.cpp:
(WebCore::Scrollbar::Scrollbar): Initialize new member variables.
(WebCore::Scrollbar::moveThumb): Added a boolean draggingDocument parameter. When true, the document
is scrolled a distance equal to the change in the mouse position.
(WebCore::Scrollbar::mouseMoved): Check with the theme whether the mouse move event should drag
the document rather than the thumb, and pass the result to moveThumb.
(WebCore::Scrollbar::mouseUp): Reset m_draggingDocument.
* platform/Scrollbar.h:
* platform/ScrollbarTheme.h:
(WebCore::ScrollbarTheme::shouldDragDocumentInsteadOfThumb): Added. The base class implementation
returns false.
* platform/mac/ScrollbarThemeMac.h:
* platform/mac/ScrollbarThemeMac.mm:
(WebCore::ScrollbarThemeMac::shouldDragDocumentInsteadOfThumb): Overridden to return true if the
Option key is down.



Canonical link: https://commits.webkit.org/74496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84767 268f45cc-cd09-0410-ab3c-d52691b4dbfc